--- a/Codename_Puck/app/src/main/res/layout/camera_view.xml
+++ b/Codename_Puck/app/src/main/res/layout/camera_view.xml
@@ -8,13 +8,7 @@
     <FrameLayout
         android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
+        android:layout_height="wrap_content">
     </FrameLayout>
     <ImageView
         android:id="@+id/upper_overlay"
@@ -23,31 +17,29 @@
         android:background="#942CFF"
         android:src="@drawable/black_cat_empty"/>
 
-    <RelativeLayout
+    <TextView
         android:orientation="horizontal"
         android:id="@+id/lower_overlay"
         android:layout_width="fill_parent"
         android:layout_height="400dp"
         android:layout_alignParentBottom="true"
-        android:background="#942CFF">
+        android:background="#942CFF"/>
 
-        <Button
-            android:id="@+id/button_capture"
-            android:text="Capture"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:onClick="onCaptureClick"/>
+    <Button
+        android:id="@+id/button_capture"
+        android:text="Capture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="onCaptureClick"/>
 
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:onClick="onUploadClick"/>
-
-    </RelativeLayout>
-
+    <Button
+        android:id="@+id/button_upload"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:onClick="onUploadClick"/>
 </RelativeLayout>
